<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
  tools:ignore="MissingTranslation">

    <string name="app_name">PlantPlaces14SS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblSearch">Search</string>
    <string name="lblGPSAPlant">GPS A Plant</string>
    <string name="lblDescription">Description of the Plant:</string>
    <string name="lblSelectAPlant">Select a Plant</string>
    <string name="lblLatidudeLabel">Latitude</string>
    <string name="blank"></string>
    <string name="lblLongitudeLabel">Longitude</string>
    <string name="lblPlantName">Plant Name</string>
    <string name="lblSelectedPlant">"Selected Plant: "</string>
    <string name="lblTakePhoto">Take Photo</string>
    <string name="lblSelectPicture">Select a Picture</string>
    <string name="unable_to_open_image">Unable to open image</string>
    <string name="mnuPlantDetailMaster">Plant Detail Master View</string>
    <string name="lblMap">Map</string>

</resources>
