<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GPSAPlantActivity" >

    <TextView
        android:id="@+id/lblPlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblGPSAPlant" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtDescription"
        android:layout_below="@+id/edtDescription"
        android:onClick="searchClicked"
        android:text="@string/lblSelectAPlant" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblPlantName"
        android:layout_below="@+id/lblPlantName"
        android:text="@string/lblDescription" />

    <TextView
        android:id="@+id/txtLatitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search"
        android:layout_below="@+id/search"
        android:text="@string/lblLatidudeLabel" />

    <TextView
        android:id="@+id/lblLatitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:layout_toRightOf="@+id/txtLatitudeLabel"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/lblLongitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLatitudeLabel"
        android:layout_below="@+id/txtLatitudeLabel"
        android:text="@string/lblLongitudeLabel" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblLongitudeLabel"
        android:layout_toRightOf="@+id/lblLongitudeLabel"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblLongitudeLabel"
        android:layout_below="@+id/lblLongitudeLabel"
        android:text="@string/lblSelectedPlant" />

    <TextView
        android:id="@+id/txtSelectedPlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/blank" />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:onClick="onTakePhotoClicked"
        android:text="@string/lblTakePhoto" />

    <ImageView
        android:id="@+id/imgPlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCaptureImage"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnCaptureImage"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>