<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblPlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lblPlantName" />

    <AutoCompleteTextView
        android:id="@+id/actPlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblPlantName"
        android:ems="10"
        android:text="@string/blank" >

        <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/btnSearchPlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/actPlantName"
        android:onClick="searchForPlants"
        android:text="@string/lblSearch" />

    <Button
        android:id="@+id/btnSelectPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnSearchPlant"
        android:onClick="onSelectAPictureClick"
        android:text="@string/lblSelectPicture" />

    <ImageView
        android:id="@+id/imgPlantSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnSelectPicture"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>
